--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,60 +1,35 @@
-name: paylink_payment_sdk
-description: 'A Flutter SDK for seamless integration with PayLink payment gateway. 
-  It simplifies the process of embedding payment functionalities in Flutter apps, 
-  handling order details fetching, client information retrieval, and providing 
-  an easy-to-use interface for payment processing. Ideal for businesses and developers 
-  looking to incorporate efficient and secure online payment solutions in their mobile applications.'
-version: 0.9.3
+name: paylink_payment
+description: "A Flutter Package designed to simplify the integration of Paylink's payment gateway into Flutter applications. It provides a streamlined way to handle payments within your Flutter app."
+version: 1.0.0
 homepage: https://paylink.sa
+documentation: https://developer.paylink.sa/
+topics:
+  - payment
+  - paylink
+  - mada
+  - stcpay
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=3.3.0 <4.0.0'
+  flutter: '>=1.17.0'
 
 dependencies:
-  flutter_webview_plugin: ^0.4.0
-  http: ^0.13.6
+  webview_flutter: ^4.7.0
+  http: ^1.2.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
