--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,20 +2,20 @@ name: Publish to pub.dev
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+    # tags:
+      # - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2.14.0
-        with:
-          flutter-version: 'stable'
+        uses: subosito/flutter-action@v2
+        # with:
+          # flutter-version: 'stable'
 
       - name: Install dependencies
         run: flutter pub get
@@ -23,5 +23,5 @@ jobs:
       - name: Publish package
         run: flutter pub publish --dry-run
 
-      - name: Publish package
-        run: flutter pub publish
+      # - name: Publish package
+        # run: flutter pub publish
