--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish to pub.dev
 
 on:
   push:
-    # tags:
-      # - 'v[0-9]+.[0-9]+.[0-9]+*'
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
   publish:
@@ -23,5 +23,5 @@ jobs:
       - name: Publish package
         run: flutter pub publish --dry-run
 
-      # - name: Publish package
-        # run: flutter pub publish
+      - name: Publish package
+        run: flutter pub publish
