--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,27 @@
-name: Publish to pub.dev
+# name: Publish to pub.dev
 
-on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+# on:
+#   push:
+#     tags:
+#       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
-jobs:
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+# jobs:
+#   publish:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        # with:
-          # flutter-version: 'stable'
+#       - name: Set up Flutter
+#         uses: subosito/flutter-action@v2
+#         # with:
+#           # flutter-version: 'stable'
 
-      - name: Install dependencies
-        run: flutter pub get
+#       - name: Install dependencies
+#         run: flutter pub get
 
-      - name: Publish package --dry-run
-        run: flutter pub publish --dry-run
+#       - name: Publish package --dry-run
+#         run: flutter pub publish --dry-run
 
-      - name: Publish package
-        run: flutter pub publish --force
+#       - name: Publish package
+#         run: flutter pub publish --force
